# viral_sync

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V4.md  Anchor.toml  Cargo.toml  FORmilangharti.md  FORprabin.md  PUBLIC_RELEASE.md  README.md  ROADMAP_2_MONTHS.md  deploy.sh  merchant_guide.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  user_guide.md  vercel.json
app/: capacitor.config.json  next.config.ts  package-lock.json  package.json  tsconfig.json
cranks/: mainnet_cranks.ts  package.json
docs/: ANALYSIS_AUDIT_2026-03-27.md  Analysis1.md  Analysis2.md  BROWSER_SMOKE_TESTING.md  CORRECTED_MASTER_PROJECT_BIBLE.md  NEPAL_FRONTEND_MASTERCLASS_DESIGN.md  NEPAL_ZERO_BUDGET_ARCHITECTURE_BLUEPRINT.md  PROJECT_AUDIT_GUIDE_2026-03-13.md  PROJECT_BIBLE.md  RUNTIME_INCIDENT_CONTROLS.md  ZK_COMPRESSION_V5.md
programs/viral_sync/: Cargo.toml
programs/viral_sync/src/: errors.rs  events.rs  lib.rs
programs/viral_sync/src/instructions/: bond_management.rs  burn_tokens.rs  claim_commission.rs  disputes.rs  escrows.rs  finalize_inbound.rs  geo_fencing.rs  init_token_generation.rs  init_treasury_token_generation.rs  merchant_init.rs  mod.rs  oracles.rs  process_redemption.rs  referral_cleanup.rs  session_management.rs  transfer_hook.rs
programs/viral_sync/src/state/: bond_claim_marker.rs  commission_ledger.rs  dispute_record.rs  geo_attestation_nonce.rs  merchant_bond.rs  merchant_closure_snapshot.rs  merchant_config.rs  merchant_reputation.rs  mod.rs  referral_record.rs  session_key.rs  token_generation.rs  viral_oracle.rs
relayer/: package.json  (+2 more)
(+101 files in other folders)
